--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.7.0
 click==8.1.7
 Flask==3.0.0
 Flask-Bcrypt==1.0.1
+Flask-Cors==4.0.0
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.1
