--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,44 @@
 alembic==1.12.1
+annotated-types==0.6.0
+anyio==3.7.1
 bcrypt==4.0.1
+bidict==0.22.1
 blinker==1.7.0
+certifi==2023.11.17
 click==8.1.7
+distro==1.8.0
+dnspython==2.4.2
+eventlet==0.33.3
+ffmpeg-python==0.2.0
 Flask==3.0.0
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 Flask-Migrate==4.0.5
+Flask-SocketIO==5.3.6
 Flask-SQLAlchemy==3.1.1
+future==0.18.3
 greenlet==3.0.1
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.2
+idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.3.0
 MarkupSafe==2.1.3
+openai==1.3.5
 psycopg2-binary==2.9.9
+pydantic==2.5.2
+pydantic_core==2.14.5
 PyJWT==2.8.0
 python-dotenv==1.0.0
+python-engineio==4.8.0
+python-socketio==5.10.0
+simple-websocket==1.0.0
+six==1.16.0
+sniffio==1.3.0
 SQLAlchemy==2.0.23
+tqdm==4.66.1
 typing_extensions==4.8.0
 Werkzeug==3.0.1
+wsproto==1.2.0
